Projeto-O-Marco-Zero-Projeto-Html-Aws

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             </section>
 
             <section>
-                <a href="#" target="_blank"> Home</a>
-                <a href="#" target="_blank">Onde fica</a>
-                <a href="#" target="_blank">Dicas</a>
+                <a href="#"> Home</a>
+                <a href="./dicas.html" target="_blank">Dicas</a>
             </section>
         </nav>
     </header>
