Projeto-O-Marco-Zero-Projeto-Html-Aws

--- a/dicas.html
+++ b/dicas.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
+    <title>O Marco Zero</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <section>
-                <img src="./img/marco zero.jpg" alt="Logo marco zero">
-            </section>
+            <section class="secaonav">
 
-            <section>
-                <a href="index.html"> Home</a>
-                <a href="./dicas.html" target="_blank">Dicas</a>
+                <img class="imgnav" src="./img/marco zero.jpg" alt="logo empresa">
+                <p class="p-navbar">
+                    <a href="./index.html">HOME</a>
+                    <a href="./dicas.html">DICAS</a>
+                </p>
             </section>
         </nav>
     </header>
@@ -53,7 +54,8 @@
         </section>
 
         <section>
-            <section><img src="./img/Torre_de_Cristal_-_Recife-PE(2).jpg" alt=""></section>
+            <section> <img class="img-banner" src="./img/Torre_de_Cristal_-_Recife-PE(2).jpg" alt="Torre de Cristal">
+            </section>
             <h1>Visitar o Parque das Esculturas de Francisco Brennand</h1>
             <p>Em 2000, para comemorar os 5000 anos da chegada dos portugueses ao Brasil, o Marco Zero do Recife Antigo
                 recebeu uma exposição com várias obras do artista plástico pernambucano Francisco Brennand.
@@ -71,15 +73,8 @@
     </main>
 
     <footer>
-        <section>
-            <h3>Redes Sociais Recife</h3>
-            <ul>
-                <a href="#">Facebook</a>
-                <a href="#">Instagran</a>
-                <a href="#">Twitter</a>
-                <a href="#">Whatsapp</a>
-            </ul>
-        </section>
+
+
     </footer>
 
 
