--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./estilo.css">
     <title>O Marco Zero</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <section>
-                <img src="./img/marco zero.jpg" alt="Logo marco zero">
-            </section>
+            <section class="secaonav">
 
-            <section>
-                <a href="#"> Home</a>
-                <a href="./dicas.html" target="_blank">Dicas</a>
+                <img class="imgnav" src="./img/marco zero.jpg" alt="logo empresa">
+                <p class="p-navbar">
+                    <a href="#">HOME</a>
+                    <a href="./dicas.html">DICAS</a>
+                </p>
             </section>
         </nav>
     </header>
@@ -25,9 +26,12 @@
     <br>
     <br>
     <main>
-        <section>
-            <img src="./img/Praça_do_Marco_Zero,_Recife,_Pernambuco,_Brasil.jpg" alt="MARCO ZERO EM RECIFE">
+
+        <section class="secaobanner">
+            <img class="img-banner" src="./img/Praça_do_Marco_Zero,_Recife,_Pernambuco,_Brasil.jpg"
+                alt="Praça do Marco Zero">
         </section>
+
         <section>
 
             <h1>Marco Zero</h1>
@@ -65,15 +69,8 @@
     </main>
 
     <footer>
-        <section>
-            <h3>Redes Sociais Recife</h3>
-            <ul>
-                <a href="#">Facebook</a>
-                <a href="#">Instagran</a>
-                <a href="#">Twitter</a>
-                <a href="#">Whatsapp</a>
-            </ul>
-        </section>
+
+
     </footer>
 
 </body>
